--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
-  <body style="background-color:black;">
+  <body style="background-color:black; color:white;font-family:sans-sarif;">
     <h2 style="text-align:center">Collect all cubes to end world hunger. also , hit F5 to reset  ¯\_(ツ)_/¯ </h2>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas"></canvas>
