--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body style="background-color:black;">
-    <h2 style="text-align:center;color:white;font-family:sans-serif;">Collect all cubes to end world hunger. also , hit F5 to reset  ¯\_(ツ)_/¯ </h2>
+    <h2 style="text-align:center;color:white;font-family:Arial;">Collect all cubes to end world hunger. also , hit F5 to reset  ¯\_(ツ)_/¯ </h2>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas"></canvas>
       <div id="unity-loading-bar">
