--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body style="background-color:black;">
     <h2 style="text-align:center;color:white;font-family:Arial;">Collect all cubes to end world hunger. also , hit F5 to reset  ¯\_(ツ)_/¯ </h2>
-    <div id="unity-container" class="unity-desktop" style="box-shadow:0px 0px 20px gray">
+    <div id="unity-container" class="unity-desktop" style="box-shadow:5px 5px 20px 2px  white !important">
       <canvas id="unity-canvas"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
